--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -20,6 +20,16 @@
             android:layout_centerInParent="true"
             android:src="@drawable/logo_jdg"/>
 
+        <ImageView
+            android:id="@+id/loader"
+            android:gravity="center"
+            android:keepScreenOn="true"
+            android:layout_below="@+id/aboutimg"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/ic_cached_black_24dp"/>
+
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
