--- a/app/src/main/res/layout/bottom_bar.xml
+++ b/app/src/main/res/layout/bottom_bar.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/yellow_darken2"
+        android:elevation="5dp"
         app:itemBackground="@color/yellow_darken2"
         app:itemIconTint="@drawable/selected_bottom"
         app:itemTextColor="@drawable/selected_bottom"
